--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+# for jax[cpu] and jax[cuda]
+--find-links https://storage.googleapis.com/jax-releases/jax_releases.html
+--find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 cvxpy[GUROBI]>=1.3.1  # [DEV]
 hypothesis>=6.75.3  # [DEV]
-jax[cuda12_pip]>=0.4.10
+jax>=0.4.12
 jax_dataclasses>=1.5.1
-jaxlib==0.4.10+cuda12.cudnn88
+jaxlib==0.4.12+cuda12.cudnn89
 matplotlib>=3.7.1  # [DEV]
-numpy>=1.24.3
+numpy>=1.24.5
 nvidia-cudnn-cu12>=8.9.1.23
 pre-commit>=3.3.2  # [DEV]
 pytest>=7.3.1  # [DEV]
-# scipy>=1.10.1
+scipy>=1.10.1
