--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ classifiers = [
 ]
 dependencies = [
     "jax>=0.4.10",
-    # "jaxlib==0.4.10+cuda12.cudnn89",
-    "jaxlib==0.4.10+cuda11.cudnn86",
+    # "jaxlib>=0.4.10+cuda12.cudnn89",
+    "jaxlib>=0.4.10+cuda11.cudnn86",
     # "jaxlib>=0.4.10",
     "numpy>=1.25.2",
     # "nvidia-cudnn-cu12>=8.9.1.23",
